fixed overflow burger menu open

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,11 @@ button:hover {
   font-size: 20px;
   right: 5px;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
 @media (max-width: 576px) {
   h1 {
     font-size: 24px;
